[package]
name = "advent2018"
version = "0.1.0"
authors = ["joeyrobert <joey@joeyrobert.org>"]

[dependencies]
bit-vec = "0.5.0"
regex = "1.1.0"
skiplist = "0.2.10"

[[bin]]
name = "advent_01"
path = "src/advent_01.rs"

[[bin]]
name = "advent_02"
path = "src/advent_02.rs"

[[bin]]
name = "advent_03"
path = "src/advent_03.rs"

[[bin]]
name = "advent_04"
path = "src/advent_04.rs"

[[bin]]
name = "advent_05"
path = "src/advent_05.rs"

[[bin]]
name = "advent_06"
path = "src/advent_06.rs"

[[bin]]
name = "advent_07"
path = "src/advent_07.rs"

[[bin]]
name = "advent_08"
path = "src/advent_08.rs"

[[bin]]
name = "advent_09"
path = "src/advent_09.rs"

[[bin]]
name = "advent_10"
path = "src/advent_10.rs"

[[bin]]
name = "advent_11"
path = "src/advent_11.rs"

[[bin]]
name = "advent_12"
path = "src/advent_12.rs"

[[bin]]
name = "advent_13"
path = "src/advent_13.rs"

[[bin]]
name = "advent_14"
path = "src/advent_14.rs"

[[bin]]
name = "advent_15"
path = "src/advent_15.rs"

[[bin]]
name = "advent_16"
path = "src/advent_16.rs"